🐛 fix: form checkboxes spacing

--- a/urbanstyle/user/themes/urban/css/site.css
+++ b/urbanstyle/user/themes/urban/css/site.css
@@ -17,7 +17,7 @@
     }
 
     input[type='checkbox'] {
-        @apply text-black p-3 border-0 relative top-[2px] bg-gray-400 focus:ring-0 transition;
+        @apply text-black p-3 border-0 bg-gray-400 focus:ring-0 transition;
     }
 
     h1,
@@ -102,7 +102,7 @@
     .looker {
         @apply relative pb-[75%];
     }
-    
+
     .looker iframe,
     .looker object,
     .looker embed {
